org.mmisw.ont - Ontology and Term URI resolver 
Carlos Rueda - MMI / MBARI
$Id$

ChangeLog

2010-04-28
	Re-writing of Graphviz dot format generation moved to new module
	org.mmisw.ont2dot
	
	
2010-04-05   1.7.0.beta1
	- Removal of an ontology ...
	
	
2009-12-29   1.6.0.beta3
	- NOTE about AllegroGraph bugs. See OntGraphAG._executeQuery:
	  1) SPARQLQuery.run throws an exception! Documentation in this regard is very little. So, I'm
	     calling the other methods to execute the various query flavors.
	  2) the AG serializers are not working (not even in the examples provided by them). So, I'm
	  creating a jena Model from the results and then using the jena serializer.
	  TODO: this is already working for some of the requests but needs to be completed.
	  Examples:
	     http://localhost:8080/ont?uri=http://example.org/test1/termThree&form=n3
	     http://localhost:8080/ont?uri=http://example.org/test1/termThree&form=owl
	     http://localhost:8080/ont?uri=http://example.org/test1/termThree&form=rdf
	     http://localhost:8080/ont?uri=http://example.org/test1/termThree&form=csv
	     http://localhost:8080/ont?uri=http://example.org/test1/termThree&form=html
	  NOTE that this functionality is particularly for terms (not for whole ontologies)
	  
	
2009-12-28   1.6.0.beta3
	- OntGraphAG: removed unused code.
	- new AdminDispatcher: helper for OntServlet
	
	Processing the association of user-specified named graphs:
	
	- IOntGraph.loadOntology(ontology, graphId): now with the graphId parameter.
	  Only processed by the OntGraphAG implementation.
	
	- new build property ont.internal.dir (/Users/Shared/mmiregistry/internal) to store some internal
	  resources, currently the graphs.rdf file, which is used to store the user-specified graphs
	  following the RDFG vocabulary (http://www.w3.org/2004/03/trix/rdfg-1)
	  
	- AdminDispatcher: besides the SKOS-related statments for inference, the supporting statements also